--- a/index.html
+++ b/index.html
@@ -19,24 +19,24 @@
             <div class="jumbotron" id="blueBack"> 
                 <div class="header">
                     <div class="row">
-                        <div class="col-sm-1">
-                            <img class="img img-responsive" src="./images/icon.png" alt="Paper board with list of tasks"/>
+                        <div class="col-md-1 col-sm-2 col-xs-3">
+                            <img class="img-responsive" src="./images/icon.png" alt="Paper board with list of tasks"/>
                         </div>
-                        <div class="col-sm-11">
+                        <div class="col-md-11 col-sm-10 col-xs-9">
                             <h2 class="myH2">Do not forget...</h2>
                         </div>
                     </div>
                 </div>
 
-                <div class="container">
+                <div class="container container-1">
                     <div class="row">
-                        <div class="col-sm-10">
+                        <div class="col-md-9 col-sm-8 col-xs-8">
                             <div class="form-group">
-                                <input type="text" class="form-control input-lg" placeholder="New item...">
+                                <input type="text" class="form-control" placeholder="New item...">
                             </div>
                         </div>
-                        <div class="col-sm-2">
-                            <button type="button" class="btn btn-primary btn-lg" >Add an item...</button>
+                        <div class="col-md-3 col-sm-4 col-xs-4">
+                            <button type="button" class="btn btn-primary" >Add an item</button>
                         </div>
                     </div>
                 </div>
@@ -44,10 +44,12 @@
 
         
     <!-- List_Of_Items Section -->
-            <div class="container">
+            <div class="container container-2">
                 <div class="row">
-                    <div class="form-group">
-                        <textarea class="form-control" rows="20"></textarea>
+                    <div class="col-md-12 col-sm-12 col-xs-12">
+                        <div class="form-group">
+                            <textarea class="form-control" rows="20"></textarea>
+                        </div>
                     </div>
                 </div>
             </div>
