Delete white space beneth the footer

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 
 
     <!-- Footer Section -->
-            <div class="footer">
-                <h5 class="footEnd">Powered by Eunice </h5>
+            <div class="wholeFooter">
+                <h5 class="footer">Powered by Eunice </h5>
             </div>
         </div>
     <!-- Defined JS-->
