--- a/index.html
+++ b/index.html
@@ -16,27 +16,27 @@
     <body>
         <div class="all">
     <!-- Header Section -->
-            <div class="jumbotron" id="blueBack"> 
+            <div class="jumbotron" id="myJumbotron"> 
                 <div class="header">
                     <div class="row">
-                        <div class="col-md-1 col-sm-2 col-xs-3">
+                        <div class="col-lg-1 col-md-1 col-sm-2 col-xs-3">
                             <img class="img-responsive" src="./images/icon.png" alt="Paper board with list of tasks"/>
                         </div>
-                        <div class="col-md-11 col-sm-10 col-xs-9">
+                        <div class="col-lg-11 col-md-11 col-sm-10 col-xs-9">
                             <h2 class="myH2">Do not forget...</h2>
                         </div>
                     </div>
                 </div>
 
                 <div class="container container-1">
-                    <div class="row">
-                        <div class="col-md-9 col-sm-8 col-xs-8">
+                    <div class="row myStyleRow">
+                        <div class="col-lg-10 col-md-9 col-sm-8 col-xs-8">
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="New item...">
+                                <input type="text" class="form-control input-lg myInputStyle" placeholder="New item...">
                             </div>
                         </div>
-                        <div class="col-md-3 col-sm-4 col-xs-4">
-                            <button type="button" class="btn btn-primary" >Add an item</button>
+                        <div class="col-lg-2 col-md-3 col-sm-4 col-xs-4">
+                            <button type="button" class="btn btn-primary btn-lg myBtnStyle">Add item</button>
                         </div>
                     </div>
                 </div>
@@ -44,22 +44,27 @@
 
         
     <!-- List_Of_Items Section -->
-            <div class="container container-2">
+            <div class="container">
                 <div class="row">
-                    <div class="col-md-12 col-sm-12 col-xs-12">
-                        <div class="form-group">
-                            <textarea class="form-control" rows="20"></textarea>
-                        </div>
+                    <div class="col-md-12 col-sm-12 col-xs-12" id="list">
+                        <ol>
+                            <h4><li></li></h4>
+                            <h4><li></li></h4>
+                        </ol>
                     </div>
                 </div>
             </div>
 
-
     <!-- Footer Section -->
-            <div class="wholeFooter">
-                <h5 class="footer">Powered by Eunice </h5>
+            <div class="row">
+                <div class="navbar navbar-fixed-bottom">
+                    <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-8 col-xs-offset-2">
+                        <h5 class="footer">Powered by Eunice </h5>
+                    </div>
+                </div>
             </div>
         </div>
+
     <!-- Defined JS-->
         <script src="./scripts/main.js">
         </script>
