Preparation of webpage for JS

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
                     <div class="row myStyleRow">
                         <div class="col-lg-10 col-md-9 col-sm-8 col-xs-8">
                             <div class="form-group">
-                                <input type="text" class="form-control input-lg myInputStyle" placeholder="New item...">
+                                <input id="newItem" type="text" class="form-control input-lg myInputStyle" placeholder="New item...">
                             </div>
                         </div>
                         <div class="col-lg-2 col-md-3 col-sm-4 col-xs-4">
-                            <button type="button" class="btn btn-primary btn-lg myBtnStyle">Add item</button>
+                            <button onclick="saveItemToList()" type="button" class="btn btn-primary btn-lg myBtnStyle">Add item</button>
                         </div>
                     </div>
                 </div>
@@ -47,7 +47,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 col-sm-12 col-xs-12" id="list">
-                        <ol>
+                        <ol id="listOfItems">
                             <h4><li></li></h4>
                             <h4><li></li></h4>
                         </ol>
