--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 col-sm-12 col-xs-12" id="list">
-                        <ol id="listOfItems">
+                        <ol id="listOfItems" class="list-group" >
                         </ol>
                     </div>
                 </div>
