--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             </div>
                         </div>
                         <div class="col-lg-2 col-md-3 col-sm-4 col-xs-4">
-                            <button onclick="saveItemToList()" type="button" class="btn btn-primary btn-lg myBtnStyle">Add item</button>
+                            <button onclick="saveUserInput()" type="button" class="btn btn-primary btn-lg myBtnStyle">Add item</button>
                         </div>
                     </div>
                 </div>
